--- a/css/general.css
+++ b/css/general.css
@@ -36,7 +36,9 @@ body {
 
 .special_heading + p {
   margin: -30px 0 0;
-  font-size: 20px;
+/*   font-size: 20px; */
+    font-size: 1.6vw;
+
   text-align: center;
   color: #79797979;
 }
@@ -51,7 +53,9 @@ body {
     width: 750px;
   }
   .special_heading {
-    font-size: 60px;
+/*     font-size: 60px; */
+        font-size: 7.6vw;
+
   }
 
   .special_heading + p {
