--- a/css/general.css
+++ b/css/general.css
@@ -50,7 +50,10 @@ body {
 
 @media (min-width: 789px) {
   .container {
-    width: 750px;
+/*     width: 750px; */
+        width: 95vw;
+
+
   }
   .special_heading {
 /*     font-size: 60px; */
@@ -67,7 +70,9 @@ body {
 
 @media (min-width: 992px) {
   .container {
-    width: 970px;
+/*     width: 970px; */
+        width: 97.78vw;
+
   }
 }
 
