--- a/css/general.css
+++ b/css/general.css
@@ -35,7 +35,9 @@ body {
 }
 
 .special_heading + p {
-  margin: -30px 0 0;
+/*   margin: -30px 0 0; */
+      margin: -2vw 0 0;
+
 /*   font-size: 20px; */
     font-size: 1.6vw;
 
