--- a/css/general.css
+++ b/css/general.css
@@ -54,6 +54,7 @@ body {
   .container {
 /*     width: 750px; */
         width: 95vw;
+    background-color: rgb(200, 108, 213);
 
 
   }
@@ -75,6 +76,7 @@ body {
   .container {
 /*     width: 970px; */
         width: 97.78vw;
+    background-color: rgb(189, 209, 140);
 
   }
 }
@@ -84,5 +86,15 @@ body {
 @media (min-width: 1200px) {
   .container {
     width: 1170px;
+    
   }
 }
+
+
+
+
+
+
+
+
+
