Update general.css remove green color

--- a/css/general.css
+++ b/css/general.css
@@ -54,7 +54,7 @@ body {
   .container {
 /*     width: 750px; */
         width: 95vw;
-    background-color: rgb(200, 108, 213);
+/*     background-color: rgb(200, 108, 213); */
 
 
   }
@@ -76,7 +76,7 @@ body {
   .container {
 /*     width: 970px; */
         width: 97.78vw;
-    background-color: rgb(189, 209, 140);
+/*     background-color: rgb(189, 209, 140); */
 
   }
 }
